# zephir-services

./: .coverage  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  codecov.yml
app_cli/: echo_cli.py
cid-minter/: .gitignore  README.md  config.py
cid-minting/: .gitignore  README.dm  README.md  cid_inquiry.py  cid_minting_store.py  config.py  create_sqlite_db.py  local_cid_minter.py  mint_cid.py  my_app.py  oclc_lookup.py  read_write_cid_minter.py  run_cid_inquiry.sh  run_cid_inquiry_background.sh  run_local_cid_minter.sh  sample_ocns.txt  sqlalchemy_test.py  zephir_cluster_lookup.py
marctools/: batch_output_zephir_records.py  compare_records.py  output_zephir_records.py  output_zephir_records_for_auto_split.py  (+4 more)
scripts/marc_comparison/: Pipfile  README.md  example_cli.py  export_marc_item_records.py  feddoc_comparison.py  field_builder.py  htid_cid_explode.py  id_printout.py  marc_compare.py  match_up_file.py  pst_content_analysis.ipynb  pyproject.toml  snapshot.py
scripts/marc_comparison/data/: fourth.xml
scripts/marc_comparison/tests/: conftest.py  test_comparisons.py  test_example_cli.py  test_export_marc_item_records.py  test_field_builder.py  test_id_printout.py  test_marc_compare.py  test_match_up_file.py
scripts/marc_comparison/tests/test_comparisons/: first.xml  first_changed_pub.xml
scripts/marc_comparison/tests/test_export_marc_item_records/: db.yml  missing_input.txt  success_input.txt  test_database.sqlite
scripts/marc_comparison/tests/test_id_printout/: three_records.xml
scripts/marc_comparison/tests/test_match_up_file/: third.xml
(+348 files in other folders)
